# test-hub

./: .env.example  drizzle.config.ts  nuxt.config.ts  package-lock.json  package.json
.opencode/: opencode.json
app/: app.vue
app/components/: UserMenu.vue
app/components/jobs/: JobsTable.vue
app/components/test-packs/: DeleteModal.vue  Form.vue  UpsertModal.vue
app/components/tests/: FiltersPanel.vue  TestListTable.vue  TestListTableWithFilters.vue
app/layouts/: default.vue
app/middleware/: auth.global.ts
app/pages/: jobs.vue  login.vue  test-executions.vue  test-packs.vue  tests.vue
app/pages/jobs/: [id].vue  index.vue
app/pages/test-packs/: [id].vue  index.vue  new.vue
app/pages/tests/: [id].vue  index.vue
app/types/: index.d.ts
docs/: principles.md  test-pack-platform.md  test-run-operations-spec.md
examples/great-expectations-example/: Dockerfile  README.md  pyproject.toml
examples/great-expectations-example/tests/: test_expectations.py
examples/pytest-example/: .dockerignore  Dockerfile  README.md  pyproject.toml
examples/pytest-example/src/pytes_example/: __init__.py
examples/pytest-example/src/pytes_example.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/pytest-example/tests/: test_calculator.py  test_randomly_failing.py  test_slow.py
server/api/auth/: login.post.ts  (+1 more)
server/db/: qa-manager.db  schema.ts
server/middleware/: auth.ts
server/plugins/: jobs-worker.ts
server/utils/: adapters.ts  db.ts  docker-images.ts  docker-runner.ts  job-logs.ts  jobs.ts  local-runner.ts  test-packs.ts
shared/types/: auth.d.ts
(+22 files in other folders)
