[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "great-expectations-example"
version = "0.1.0"
description = "Example Python project with Great Expectations tests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "pytest>=8.0",
  "great-expectations>=1.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
