[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytes-example"
version = "0.1.0"
description = "Example Python project with pytest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
